# rcs3

./: .gitignore  README.md
POC/: README.md  pyproject.toml  sample-aws-workflow.md  setup.cfg
POC/cloudadmin/: NOTES  bucket-to-eventbridge.py  create-admin-sns-topic.py  create-athena-workgroup.py  create-bucket-with-inventory.sh  create-calcUploadBytes-cron.py  create-eventbridge-rule.py  create-keyAgeMetric-cron.py  create-role-with-policy-j2.py  create-role-with-policy.py  create-s3-gateway.py  create-service-account-ec2-policy.py  create-service-account-policy-jinja2.py  create-service-account-policy.py  create-service-account-restore-lambda.py  create-service-account-restore-policy.py  create-service-account-restore-role.py  create-service-account-restore-sfn.py  create-sns-topic.py  create-storage-lens.sh  delete-all-bucket-objects.py  delete-bucket-alarms.py  delete-bucket-and-user.py  delete-service-account-policy.py  delete-sns-topic.py  enable-monitoring.sh  functions.sh  harden-default-vpc.py  key-age-metric-lambda.py  last-activity-alarm-lambda.py  post-sns-topic.py  rcs3functions.py  remove-lifecycle-inventory-from-bucket.py  replace-user-key.py  set-bucket-alarms.py  set-cloudwatch-composite-dashboards.py  set-cloudwatch-dashboards.py  set-quotas.py
POC/common/: aws-settings-to-bash.py  createdb.py  filterjson.py  genvars.py  rcs3functions.py  transform.py
POC/config/: .gitignore  README  aws-admin.in  aws-settings-poc.yaml  aws-settings-test.yaml  aws-settings.yaml  common_excludes.yaml  exclusions-global  quotas.csv
POC/grafana/: .gitignore  (+2 more)
(+259 files in other folders)
